<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_marginTop="-50dp"
                android:textAlignment="center"
                app:srcCompat="@drawable/logo_laokako" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:fontFamily="@font/noto_serif_italic_font"
                android:letterSpacing="@dimen/letter_spacing"
                android:text="@string/welcome_text"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_serif_italic_font"
                android:letterSpacing="@dimen/letter_spacing"
                android:text="@string/app_name_big"
                android:textColor="@color/principal_color"
                android:textSize="30dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/noto_serif_italic_font"
                android:letterSpacing="@dimen/letter_spacing"
                android:text="@string/app_description"
                android:textColor="@color/light_gray"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-55dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/copyright" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/noto_serif_font"
                    android:text="@string/author_name"
                    android:textColor="@color/light_gray"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:background="@color/line_color"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/app_info_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/information_green" />

        <ImageView
            android:id="@+id/parameter_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/cog_wheel" />

        <ImageView
            android:id="@+id/proposition_menu_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/cloche" />

        <ImageView
            android:id="@+id/history_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/calendar" />

        <ImageView
            android:id="@+id/menu_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/book" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>