<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:text="Hanampy laoka vaovao"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_serif_italic_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:letterSpacing="@dimen/letter_spacing"
                android:text="@string/add_menu_description"
                android:textSize="16dp"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_italic_font"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/line_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="Anaran'ny laoka"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_font"/>
            
            <EditText
                android:id="@+id/new_menu_name"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Apetraka eto ny anaran'ny laoka"
                android:textSize="16dp"
                android:textAlignment="center"
                android:fontFamily="@font/noto_serif_font"
                android:background="@drawable/outline_principal_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="Fotoana fikarakarana"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_font"/>

            <EditText
                android:id="@+id/new_menu_duration"
                android:layout_marginTop="15dp"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:hint="20 min"
                android:textSize="16dp"
                android:textColor="@color/light_gray"
                android:textAlignment="center"
                android:inputType="number"
                android:fontFamily="@font/noto_serif_font"
                android:background="@drawable/outline_principal_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="Fotoana mety aminy"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_font"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/morning"
                    android:background="@drawable/green_outline_circle_background"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/time"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/night_mode"
                    android:padding="10dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/green_outline_circle_background"
                    android:layout_marginRight="40dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="Fangaro ilaina"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_font"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:letterSpacing="@dimen/letter_spacing"
                android:text="@string/add_ingredient_warning"
                android:textSize="16dp"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_italic_font"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="25dp">

                <Spinner
                    android:id="@+id/ingredient_choice_spinner"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.5"/>


                <EditText
                    android:id="@+id/needed_price"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="200 Ar"
                    android:textSize="16dp"
                    android:textAlignment="center"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:fontFamily="@font/noto_serif_font"
                    android:background="@drawable/outline_edit_text_background"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:text="+"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_principal_background"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/required_ingredient_list"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="Fikarakarana azy"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_font"/>

            <EditText
                android:id="@+id/menu_description"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:layout_height="150dp"
                android:background="@drawable/outline_edit_text_background"
                android:ems="10"
                android:fontFamily="@font/noto_serif_italic_font"
                android:textColor="@color/light_gray"
                android:gravity="start|top"
                android:hint="@string/menu_description_hint"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="Sarin'ny laoka"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/noto_serif_font"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/filled_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/carotte"/>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12dp"
                        android:textAlignment="center"
                        android:text="MIALOHA"
                        android:letterSpacing="@dimen/letter_spacing"
                        android:textColor="@color/light_gray"
                        android:fontFamily="@font/noto_serif_italic_font"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/empty_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/outline_principal_background"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/plus_symbol_button"/>

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12dp"
                        android:textAlignment="center"
                        android:text="AORIANA"
                        android:letterSpacing="@dimen/letter_spacing"
                        android:textColor="@color/light_gray"
                        android:fontFamily="@font/noto_serif_italic_font"/>

                </LinearLayout>
                
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:background="@drawable/button_principal_background"
                android:textColor="@color/white"
                android:fontFamily="@font/noto_serif_font"
                android:textSize="20dp"
                android:text="ampidirina ny laoka"
                android:letterSpacing="@dimen/letter_spacing"/>

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:background="@color/line_color"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/app_info_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/information" />

        <ImageView
            android:id="@+id/parameter_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/cog_wheel" />

        <ImageView
            android:id="@+id/proposition_menu_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/cloche" />

        <ImageView
            android:id="@+id/history_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/calendar" />

        <ImageView
            android:id="@+id/menu_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/book_green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>